--- a/frontend/app/views/fragments/modal/staffChangeEmail.scala.html
+++ b/frontend/app/views/fragments/modal/staffChangeEmail.scala.html
@@ -6,8 +6,8 @@
         <p>You will no longer be able to sign in to <strong>theguardian.com</strong> using <strong>@identityEmail</strong>.</p>
         <p>You must use <strong>@staffGoogleEmail</strong> to sign in from now.</p>
         <div class="modal-cta-container">
-            <button class="action action--no-margin js-modal-confirm">Change email address</button>
-            <button class="action-secondary-small action-secondary-small--modal action-secondary-small--no-margin js-modal-cancel">Cancel</button>
+            <button class="action u-no-vertical-margin js-modal-confirm">Change email address</button>
+            <button class="action-secondary-small action-secondary-small--modal u-no-vertical-margin js-modal-cancel">Cancel</button>
         </div>
     </div>
     <div class="modal__supplementary">
