--- a/frontend/app/views/patterns/patterns.scala.html
+++ b/frontend/app/views/patterns/patterns.scala.html
@@ -42,6 +42,21 @@
         <a class="action action--fullwidth" href="#">Action</a>
     }
 
+    @pattern("Toggle Component - Button", "JS toggle component") {
+        <button class="js-toggle action action--toggle" data-toggle="foo" data-toggle-label="Show less">Show more</button>
+        <div id="foo" data-toggle-hidden>This is initially hidden Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius cum consequatur quod inventore, itaque adipisci ut quibusdam illum, deleniti molestiae vel, repudiandae, sunt est eum dolores odit sint deserunt velit!</div>
+    }
+
+    @pattern("Toggle Component - Button (inverted)", "JS toggle component – off by default") {
+        <button class="js-toggle action action--toggle is-toggled" data-toggle="foo-inverted" data-toggle-label="Show more">Show less</button>
+        <div id="foo-inverted">This is a really boring sentence, you should hide it right now.</div>
+    }
+
+    @pattern("Toggle Component - Link", "JS toggle component can be used on any element, not just buttons") {
+        <a class="js-toggle" data-toggle="bar" data-toggle-label="Show less">Show more</a>
+        <div id="bar" data-toggle-hidden>This is initially hidden Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius cum consequatur quod inventore, itaque adipisci ut quibusdam illum, deleniti molestiae vel, repudiandae, sunt est eum dolores odit sint deserunt velit!</div>
+    }
+
     @pattern("Base - Inline Text Elements") {
         <div class="copy">
             <p><a href="#">This is a text link</a></p>
@@ -130,21 +145,6 @@
         </table>
     }
 
-    @pattern("Toggle Component - Button", "JS toggle component") {
-        <button class="js-toggle action action--toggle" data-toggle="foo" data-toggle-label="Show less">Show more</button>
-        <div id="foo" data-toggle-hidden>This is initially hidden Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius cum consequatur quod inventore, itaque adipisci ut quibusdam illum, deleniti molestiae vel, repudiandae, sunt est eum dolores odit sint deserunt velit!</div>
-    }
-
-    @pattern("Toggle Component - Button (inverted)", "JS toggle component – off by default") {
-        <button class="js-toggle action action--toggle is-toggled" data-toggle="foo-inverted" data-toggle-label="Show more">Show less</button>
-        <div id="foo-inverted">This is a really boring sentence, you should hide it right now.</div>
-    }
-
-    @pattern("Toggle Component - Link", "JS toggle component can be used on any element, not just buttons") {
-        <a class="js-toggle" data-toggle="bar" data-toggle-label="Show less">Show more</a>
-        <div id="bar" data-toggle-hidden>This is initially hidden Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius cum consequatur quod inventore, itaque adipisci ut quibusdam illum, deleniti molestiae vel, repudiandae, sunt est eum dolores odit sint deserunt velit!</div>
-    }
-
     @pattern("Page Header") {
         @fragments.page.pageHeader("This a page headline", Some("This is a page header with a headline and intro text"))
     }
@@ -216,33 +216,35 @@
     }
 
     @pattern("Event – Hero", "Used to highlight a single event at the top of the /events listing") {
-        <ul class="events-list events-list--items-3 u-unstyled">
-            @for(event <- eventPortfolio.orderedEvents.slice(0, 1)) {
-                @fragments.event.item(event, isHero=true)
-            }
-        </ul>
+        @fragments.event.item(eventPortfolio.orderedEvents.head, isHero=true)
     }
 
     @pattern("Event – Full", "A standard event, used in a number of places") {
-        <ul class="events-list events-list--items-3 u-unstyled">
+        <ul class="grid grid--3up">
             @for(event <- eventPortfolio.normal.slice(0, 3)) {
-                @fragments.event.item(event)
+                <li class="grid__item">
+                    @fragments.event.item(event)
+                </li>
             }
         </ul>
     }
 
     @pattern("Event – Minimal", "Used currently to list recent past events, where pricing/dates info is redundant") {
-        <ul class="events-list events-list--items-3 u-unstyled">
+        <ul class="grid grid--3up">
             @for(event <- eventPortfolio.normal.slice(0, 3)) {
-                @fragments.event.item(event, false, isMinimal=true)
+                <li class="grid__item">
+                    @fragments.event.item(event, false, isMinimal=true)
+                </li>
             }
         </ul>
     }
 
     @pattern("Event – Minimal & Card", "An even more minimal theme which splits the photo and event title") {
-        <ul class="events-list events-list--items-3 u-unstyled">
+        <ul class="grid grid--2up">
             @for(event <- eventPortfolio.normal.slice(0, 3)) {
-                @fragments.event.item(event, false, isMinimal=true, isCard=true)
+                <li class="grid__item">
+                    @fragments.event.item(event, false, isMinimal=true, isCard=true)
+                </li>
             }
         </ul>
     }
