--- a/frontend/assets/stylesheets/base/_type.scss
+++ b/frontend/assets/stylesheets/base/_type.scss
@@ -2,9 +2,6 @@
    Global typography settings
    ========================================================================== */
 
-/* Root base
-   ========================================================================== */
-
 html {
     font-family: $f-serif-text;
 
@@ -23,33 +20,20 @@ body {
     line-height: 1.4;
 }
 
-/* Base headings
-   ========================================================================== */
-
 h1, h2, h3, h4, h5, h6 {
-    margin: 0;
-}
-
-
-/* Default type elements
-   ========================================================================== */
-
-blockquote {
     margin: 0;
 }
 
 p {
     margin-top: 0;
-    margin-bottom: rem(($gs-baseline / 3) * 2);
+    margin-bottom: rem($gs-baseline * 1.3333);
 }
-
-/* Membership specific type elements
-   ========================================================================== */
 
 blockquote {
     font-style: italic;
     font-weight: 300;
     margin-bottom: rem(10px);
+    margin: 0;
 
     &:before {
         @extend %icon-quote-blue;
@@ -57,28 +41,6 @@ blockquote {
         display: block;
         float: left;
         margin-right: rem(5px);
-    }
-}
-
-/* Opt-in typographic styles
-   ========================================================================== */
-   // Add more readable defaults for blocks of body copy
-   // Particularly useful when copy come from a third-party (e.g., eventbrite/evently)
-   // See:
-   //   http://css-tricks.com/opt-in-typography/
-   //   http://dbushell.com/2012/04/18/scoping-typography-css/
-   //   http://anthonyshort.me/global-typographic-styles-suck/
-
-.copy {
-    a {
-        text-decoration: none;
-        border-bottom: 1px solid $c-neutral3;
-
-        &:hover,
-        &:focus {
-            text-decoration: none;
-            border-color: $c-neutral2;
-        }
     }
 }
 
