Stylesheet cleanup & correct functional page layout breakpoints
- Move nav/ into components/nav/
- Move _tones.scss to theme/
- Add DEPRECATED note in pages/
- Move _tier to components (slowly move styles out of pages)
- Add table of contents to style.scss and clean up imports

--- a/frontend/app/views/fragments/faq/answers.scala.html
+++ b/frontend/app/views/fragments/faq/answers.scala.html
@@ -1,10 +1,10 @@
 @(faqs: List[model.Faq.Item])
 
-<div class="copy">
 @for(faq <- faqs){
     <section class="help-faqs" id="@faq.id">
         <h3 class="help-faqs__headline">@faq.question</h3>
-        <p>@faq.answer</p>
+        <div class="help-faqs__answer copy">
+            <p>@faq.answer</p>
+        </div>
     </section>
 }
-</div>
