--- a/frontend/assets/stylesheets/components/_page.scss
+++ b/frontend/assets/stylesheets/components/_page.scss
@@ -2,6 +2,8 @@
    Page
    ========================================================================== */
 
+$_page-offset: rem(gs-span(2) + $gs-gutter);
+
 /* ==========================================================================
    Brochure Page Layout Components
    ========================================================================== */
@@ -68,10 +70,10 @@
 .page-header {
     padding: rem($gs-gutter / 2) 0 rem($gs-baseline * 3);
 
-    @include mq(desktop) {
+    @include mq(mem-full) {
         width: rem(gs-span(11));
         padding-right: rem($gs-gutter);
-        padding-left: rem(gs-span(3));
+        padding-left: $_page-offset;
     }
 }
 
@@ -94,7 +96,7 @@
     @include fs-headline(2);
 
     @include mq(tablet) {
-        @include font-size(18px, 22px);
+        @include fs-headline(3);
     }
 }
 
@@ -126,8 +128,8 @@
     padding-bottom: 0;
 }
 .page-section__lead-in {
-    @include mq(desktop) {
-        width: rem(gs-span(3));
+    @include mq(mem-full) {
+        width: rem(gs-span(2));
         position: absolute;
         left: 0;
     }
@@ -139,23 +141,24 @@
 .page-section__content {
     @include mq(desktop) {
         float: left;
-        width: rem(gs-span(11)) + rem($gs-gutter);
-        padding-left: rem(gs-span(3));
-        padding-right: rem(gs-span(1));
+        width: rem(gs-span(8));
+    }
+    @include mq(mem-full) {
+        width: rem(gs-span(11));
+        padding-left: $_page-offset;
     }
 }
 .page-section__supplementary {
     clear: both;
-
-    @include mq(mem-full) {
+    @include mq(desktop) {
         clear: none;
         float: right;
+        width: rem(gs-span(4));
+    }
+    @include mq(mem-full) {
         width: rem(gs-span(3));
-        padding-left: rem($gs-gutter);
     }
 }
-
-
 
 /* Page Section - Bordered (Modifier)
    ========================================================================== */
