--- a/frontend/assets/stylesheets/components/_payment.scss
+++ b/frontend/assets/stylesheets/components/_payment.scss
@@ -1,3 +1,10 @@
+/* ==========================================================================
+   Payment
+   ========================================================================== */
+
+/* Payment Cards Sprite
+   ========================================================================== */
+
 $sprite-card-width: 108px; // target = 35 aka n/3
 $sprite-card-height: 70px;
 $sprite-card-offset-american-express:        0;
