--- a/frontend/assets/stylesheets/layout/_headings.scss
+++ b/frontend/assets/stylesheets/layout/_headings.scss
@@ -1,3 +1,8 @@
+/* ==========================================================================
+   Headings
+   ========================================================================== */
+// TODO: Merge with text helpers in _type.scss?
+
 %section-header {
     background-color: $white;
 }
@@ -44,12 +49,6 @@
     @extend %section-header;
     @include fs-headline(4);
     padding-top: rem($gs-baseline / 2);
-
-    &--top-border {
-        @include fs-headline(2);
-        border-top: 1px solid $c-neutral3;
-        padding: rem(5px) 0 rem($gs-gutter + 5);
-    }
 }
 
 .section-body-headline {
