--- a/frontend/assets/stylesheets/style.scss
+++ b/frontend/assets/stylesheets/style.scss
@@ -81,6 +81,7 @@
 @import 'components/benefits';
 @import 'components/payment';
 @import 'components/pricing';
+@import 'components/stats';
 @import 'components/tier';
 @import 'components/user';
 @import 'components/help';
