--- a/frontend/assets/stylesheets/pages/_login.scss
+++ b/frontend/assets/stylesheets/pages/_login.scss
@@ -17,26 +17,23 @@
         width: rem(gs-span(14) + $gs-gutter * 2);
     }
 
+    // TODO: Refactor out when signin and payment use functional page layout
+    // Only contains reamaining status styles
     .steps {
-        @include fs-textSans(3);
         display: block;
         position: absolute;
         top: rem($gs-baseline);
         right: 0;
 
         @include mq(tablet) {
-            @include fs-header(1);
-            font-weight: normal;
             top: rem($gs-baseline);
             right: 0;
         }
 
         @include mq(desktop) {
             position: static;
-            border-top: rem(1px) solid $c-neutral3;
             width: rem(gs-span(1) + $gs-gutter * 3);
             float: left;
-            padding-top: rem($gs-baseline / 2);
         }
 
         @include mq(mem-full) {
