Move priceInfo fragment to pricing/priceInfo

--- a/frontend/app/views/joiner/tier/patron.scala.html
+++ b/frontend/app/views/joiner/tier/patron.scala.html
@@ -22,7 +22,7 @@
 
                 <div class="join-today__join-box join-today__join-box--stripped-down-standalone">
                     <div class="join-today__join-box--header join-today__join-box--header--patron">Patron</div>
-                    @fragments.benefits.priceInfo(Tier.Patron)
+                    @fragments.pricing.priceInfo(Tier.Patron)
                     <div class="join-today__teaser">
                         <a class="action" href="/join/patron/enter-details">
                             <span class="action__text js-opt-become-member" data-link-name="Become a Patron | Introduction">Become a Patron today</span>
@@ -79,7 +79,7 @@
 
                 <div class="join-today__join-box join-today__join-box--stripped-down-standalone">
                     <div class="join-today__join-box--header join-today__join-box--header--patron">Patron</div>
-                    @fragments.benefits.priceInfo(Tier.Patron)
+                    @fragments.pricing.priceInfo(Tier.Patron)
                     <div class="join-today__teaser">
                         <a class="action" href="/join/patron/enter-details">
                             <span class="action__text js-opt-become-member" data-link-name="Become a Patron | Get Involved">Become a Patron today</span>
